# kgraph-win

./: .gitignore  CMakeLists.txt  README.md  index.cpp  kgraph-data.h  kgraph.cpp  kgraph.h  metric.cpp  test.py
python/: pykgraph.cpp  test.py
